prevent duplicated key

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "exclude": ["./test/**/*.ts"]
+  "exclude": ["./test/**/*.ts", "./dist/**/*.ts"]
 }
