--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "babel-plugin-i18next-extract-to-wordpress-translation",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Statically extract translation keys from i18next application into PHP file so it can be used in WordPress translation",
   "main": "./dist/index.js",
   "author": "Alvin Novian <alvinnovian883@gmail.com>",
   "license": "MIT",
+  "homepage": "https://github.com/alvin883/babel-plugin-i18next-extract-to-wordpress-translation",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alvin883/babel-plugin-i18next-extract-to-wordpress-translation"
+  },
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "dependencies": {
     "@babel/core": "^7.13.16",
